// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display errors 1`] = `
Object {
  "Constructor": "RoutesMembersPage",
  "Options": Object {
    "ID": "component",
    "createFormVisible": false,
    "dataLoaded": true,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [
      "Fail load members list",
    ],
    "limit": 50,
    "members": Array [],
    "offset": 0,
    "pageTitle": "Members",
    "selectedMember": null,
    "total": 0,
  },
  "html": "
<h4 class=\\"page-header\\"> Members
  <!--header-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"members-page\\">
    <ul class=\\"errors-panel\\">
      <li>Fail load members list</li>
    </ul>
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Show create new member form</button>
      <!--if-->
    </div>
    <div class=\\"container\\">
      <div class=\\"members-list\\">
        <div class=\\"panel\\"></div>
      </div>
      <!--if-->
    </div>
  </div>
  <!--body-->
</div>
<!--if-->
<!--Page-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "RoutesMembersPage",
  "Options": Object {
    "ID": "component",
    "createFormVisible": false,
    "dataLoaded": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "limit": 50,
    "members": Array [],
    "offset": 0,
    "pageTitle": "Members",
    "selectedMember": null,
    "total": 0,
  },
  "html": "
<h4 class=\\"page-header\\"> Members
  <!--header-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"members-page\\">
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Show create new member form</button>
      <!--if-->
    </div>
    <div class=\\"container\\">
      <div class=\\"members-list\\">
        <div class=\\"panel\\"></div>
      </div>
      <!--if-->
    </div>
  </div>
  <!--body-->
</div>
<!--if-->
<!--Page-->
",
}
`;
